objects/ASI_CRM_VN_Sub_Brand_Conversion_Factor__c.object
<CustomObject>
    <description>For VN CRM 2,2</description>
    <fields>
        <fullName>ASI_CRM_VN_Active_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Conversion_Factor__c</fullName>
        <label>Conversion Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Sub_brand_From__c</fullName>
        <label>Sub-brand (From)</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>SKU_Conversion_Factors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Sub_brand_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand (To)</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>SKU_Conversion_Factors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sub Brand Conversion Factor</label>
    <nameField>
        <displayFormat>SKUF{0000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Brand Conversion Factors</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_SKU_Conversion_Factor</fullName>
        <active>true</active>
        <description>For VN CRM 2</description>
        <label>ASI CRM VN SKU Conversion Factor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>